@@ -1227,13 +1227,8 @@ LISPFUN(concatenate,1,0,rest,nokey,0,NIL)
     var object defolt;
     { BEFORE(rest_args_pointer);
       { var object predicate = Before(rest_args_pointer);
-        if (!(symbolp(predicate) || functionp(predicate))) {
-          pushSTACK(predicate);   # TYPE-ERROR slot DATUM
-          pushSTACK(S(function)); # TYPE-ERROR slot EXPECTED-TYPE
-          pushSTACK(predicate);
-          pushSTACK(TheSubr(subr_self)->name);
-          fehler(type_error,GETTEXT("~: ~ is not a function"));
-        }
+        if (!(symbolp(predicate) || functionp(predicate)))
+          fehler_function(predicate);
       }
       # rest_args_pointer zeigt jetzt über alle argcount+1 Sequence-Argumente
       pushSTACK(defolt); # Defaultwert retten
